--- a/maintenance_base/views/maintenance.xml
+++ b/maintenance_base/views/maintenance.xml
@@ -26,13 +26,23 @@
         <field name="state" widget="statusbar" options="{'clickable': '1'}" />
         </header>
       </xpath>
-     <xpath expr="//div[hasclass('oe_title')]" position="before">
+     <!-- <xpath expr="//div[hasclass('oe_title')]" position="before">
       <div class="oe_title">
           
-          <h3><field name="equipment_number" readonly='1' force_save="1"/></h3>
+          <h3><field name="equipment_number"  force_save="1" col="2"/></h3>
       </div>
 
-    </xpath>
+    </xpath> -->
+    <field name="location" position="attributes">
+      <attribute name="invisible">1</attribute>
+    </field>
+    <field name="location" position="after">
+      <field name="location_id"  string="Stored Location" options="{'no_create': True, 'no_create_edit':True}"/>
+    </field>
+    <field name="category_id" position="before">
+      <field name="is_seq" invisible="1"/>
+      <field name="equipment_number"  attrs="{'readonly':[('is_seq','=',True)]}" force_save="1" />
+    </field>
     <field name="category_id" position="after">
       <field name="sub_category_1" domain="[('parent_equipment_categ','=',category_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
       <field name="sub_category_2" domain="[('parent_sub_equipment_categ_1','=',sub_category_1)]" options="{'no_create': True, 'no_create_edit':True}"/>
@@ -41,6 +51,20 @@
     <field name="serial_no" position="after">
       <field name="dimension"/>
     </field>
+    </field>
+  </record>
+
+  <record id="equipment_maintenance_kanban_inherit" model="ir.ui.view">
+    <field name="name">Manintenance Equipment</field>
+    <field name="model">maintenance.equipment</field>
+    <field name="inherit_id" ref="maintenance.hr_equipment_view_kanban"/>
+    <field name="arch" type="xml">
+      <xpath expr="//templates//div[hasclass('o_kanban_record_top')]//field[@name='name']" position="before">
+        <t t-if="record.equipment_number.raw_value"><field name="equipment_number"/><br/></t>
+      </xpath>
+      <div t-if="record.serial_no.raw_value" position="after">
+          <t t-if="record.location_id.raw_value"><span style="color:green"><field name="location_id"/></span></t>
+      </div>
     </field>
   </record>
 
@@ -53,6 +77,7 @@
         <field name="sub_category_1"/>
         <field name="sub_category_2"/>
         <field name="sub_category_3"/>
+        <field name="location_id"/>
       </field>
     </field>
   </record>
@@ -62,15 +87,20 @@
     <field name="model">maintenance.equipment</field>
     <field name="inherit_id" ref="maintenance.hr_equipment_view_search"/>
     <field name="arch" type="xml">
+      <field name="name" position="before">
+        <field string="Equipment Number" name="equipment_number"/>
+      </field>
       <field name="category_id" position="after">
         <field string="Sub-Category 1" name="sub_category_1"/>
         <field string="Sub-Category 2" name="sub_category_2"/>
         <field string="Sub-Category 3" name="sub_category_3"/>
+        <field string="Stored Location" name="location_id"/>
       </field>
       <xpath expr="//group" position="inside">
         <filter string="Sub-Category 1" name="sub_category_1" domain="[]" context="{'group_by': 'sub_category_1'}"/>
         <filter string="Sub-Category 2" name="sub_category_2" domain="[]" context="{'group_by': 'sub_category_2'}"/>
         <filter string="Sub-Category 3" name="sub_category_3" domain="[]" context="{'group_by': 'sub_category_3'}"/>
+        <filter string="Stored Location" name="location_id" domain="[]" context="{'group_by': 'location_id'}"/>
       </xpath>
     </field>
   </record>
