--- a/purchase_register_new/views/purchase_register_new.xml
+++ b/purchase_register_new/views/purchase_register_new.xml
@@ -13,50 +13,57 @@
       <tree string="Purchase Register" editable="bottom" decoration-info="quantity == 0" create="false" edit="false" delete="false">
                 <!-- <field name="id"/> -->
                 <field name="product_id"/>
-                <field name="product_ref"/>
+                <field name="product_ref" optional="1"/>
                 <field name="move_id" invisible="1"/>
-                <field name="move_name"/>
-                <field name="date" string='Accounting/Bill Date'/>
-                <field name="ref"/>
+                <field name="move_name" />
+                <field name="date" string='Accounting Date' optional="1"/>
+                <field name="move_invoice_date"  />
+                <field name="ref" optional="1" string='Bill Reference'/>
                 <field name="company_id" invisible="1"/>
                 
-                <field name="journal_id"/>
-                <field name="account_id"/>
+                <field name="journal_id" optional="1"/>
+                <field name="account_id" optional="1"/>
+                <field name="account_group_id" optional="1"/>
+                <field name="account_user_type_id" string="Account Type" optional="1"/>
                 <!-- <field name="hsn_code_name"/> -->
                 <field name="product_category" optional="1"/>
+                <field name="item_group" optional="1"/>
                 <field name="product_group_1" optional="1"/>
                 <field name="product_group_2" optional="1"/>
                 <field name="product_group_3" optional="1"/>
-                <field name="name"/>
-                <field name="partner_name"/>
-                <field name="partner_category_name"/>
-                <field name="partner_state_name"/>
-                <field name="partner_country_name"/>
-                <field name="analytic_account_id"/>
-                <field name="gst_name"/>
+                <field name="name" optional="1"/>
+                <field name="partner_name" string='Partenr'/>
+                <field name="partner_ref" optional="1"/>
+                <field name="gst_treatment" optional="1"/>
+                <field name="partner_category_name" optional="1"/>
+                <field name="partner_state_name" optional="1"/>
+                <field name="partner_country_name" optional="1"/>
+                <field name="analytic_account_id" optional="1"/>
+                <field name="gst_name" optional="1"/>
                 <field name="quantity"/>
                 <field name="price_unit"/>
                 <!-- <field name="account_tax_name"/> -->
-                <field name="tax_ids" widget="many2many_tags"/>
-                <field name="cgst_rate"/>
-                <field name="cgst_amount"/>
-                <field name="sgst_rate"/>
-                <field name="sgst_amount"/>
-                <field name="igst_rate"/>
-                <field name="igst_amount"/>
-                <field name="tds_rate"/>
-                <field name="tds_amount"/>
-                <field name="move_type_name"/>
+                <field name="tax_ids" widget="many2many_tags" optional="1"/>
+                <field name="cgst_rate" optional="1"/>
+                <field name="cgst_amount" optional="1" sum='cgst_amount'/>
+                <field name="sgst_rate" optional="1"/>
+                <field name="sgst_amount" optional="1" sum='sgst_amount'/>
+                <field name="igst_rate" optional="1" />
+                <field name="igst_amount" optional="1" sum='igst_amount'/>
+                <field name="tds_rate" optional="1"/>
+                <field name="tds_amount" optional="1" sum='tds_amount'/>
                 <!-- <field name="ocean_rate"/> -->
                 <!-- <field name="ocean_amount"/> -->
                 
                 <!-- <field name="parent_amount_tax" widget="many2many_tags"/> -->
                 <!-- <field name="amount_by_group_line" widget="tax-group-custom-field" nolabel="1" colspan="2" /> -->
          
-                <field name="price_subtotal"/>
-                <field name="amount_inclusive_tax"/>
+                <field name="price_subtotal" sum='price_subtotal'/>
+                <field name="amount_inclusive_tax" sum='amount_inclusive_tax'/>
                 <field name="currency_id"/>
-                <field name="parent_state"/>
+                <field name="move_type_name" optional="1"/>
+                <field name="warehouse_id" optional="1"/>
+                <!-- <field name="parent_state"/> -->
                 <!-- <field name="price_subtotal" invisible="1"/> -->
                 <!-- <field name="partner_id" invisible="1"/> -->
             </tree>
@@ -139,8 +146,9 @@
     <record id="action_view_purchase_register_views" model="ir.actions.act_window">
       <field name="name">Purchase Register Report</field>
       <field name="res_model">account.move.line</field>
-       <field name="domain">[('move_type_name','in',[("in_invoice"),("in_refund")]),('tax_repartition_line_id','=',None),('price_unit','>',0)]</field>
-         <field name="context">{'search_move_id': True}</field>
+       <field name="domain">[('move_type_name','in',[("in_invoice"),("in_refund")]),('tax_repartition_line_id','=',None)
+        ,('account_user_type_id','!=','Payable')]</field>
+         <field name="context">{'search_move_id': True,}</field>
       <field name="view_mode">tree,pivot,graph</field>
       <field name ="view_id" ref="purchase_summary_view_report_tree"/>    
       <field name ="search_view_id" ref="purchase_register_report_search"/>    
