--- a/sale_register_new/views/sale_register_new.xml
+++ b/sale_register_new/views/sale_register_new.xml
@@ -12,51 +12,60 @@
       <tree string="Sale Register" editable="bottom" decoration-info="quantity == 0" create="false" edit="false" delete="false">
                 <!-- <field name="id"/> -->
                 <field name="product_id"/>
+                <field name="product_ref" />
                 <field name="move_id" invisible="1"/>
-                <field name="move_name"/>
+                <field name="move_name" />
                 <!-- <field name="date"/> -->
-                <field name="invoice_date"/>
-                <field name="hsn_code"/>
-                <field name="uqc"/>
+                <field name="invoice_date" string="Accounting Date"/>
+                <field name="date" string="Bill Date"/>
+                <!-- <field name="hsn_code"/> -->
+                <!-- <field name="uqc"/> -->
                 <!-- <field name="ref"/> -->
                 <field name="company_id" invisible="1"/>
                 
-                <field name="journal_id"/>
-                <field name="account_id"/>
+                <field name="journal_id" optional="1"/>
+                <field name="account_id" optional="1"/>
+                <field name="account_user_type_id" string="Account Type" optional="1"/>
                 <!-- <field name="hsn_code_name"/> -->
                 <field name="product_category" optional="1"/>
+                 <field name="item_group" optional="1"/>
                 <field name="product_group_1" optional="1"/>
                 <field name="product_group_2" optional="1"/>
                 <field name="product_group_3" optional="1"/>
-                <field name="name"/>
-                <field name="partner_name"/>
-                <field name="partner_category_name"/>
-                <field name="partner_state_name"/>
-                <field name="partner_country_name"/>
-                <field name="analytic_account_id"/>
-                <field name="gst_name"/>
-                <field name="quantity"/>
+                <field name="name" optional="1"/>
+                <field name="partner_name" string='Partner' />
+                 <field name="partner_ref" optional="1"/>
+                <field name="gst_treatment" optional="1"/>
+                <field name="partner_category_name" optional="1"/>
+                <field name="partner_state_name" optional="1"/>
+                <field name="partner_country_name" optional="1"/>
+                <field name="analytic_account_id" optional='1'/>
+                <field name="gst_name" optional="1"/>
+                <field name="quantity" />
                 <field name="price_unit"/>
                 <!-- <field name="account_tax_name"/> -->
-                <field name="tax_ids" widget="many2many_tags"/>
-                <field name="cgst_rate"/>
-                <field name="cgst_amount"/>
-                <field name="sgst_rate"/>
-                <field name="sgst_amount"/>
-                <field name="igst_rate"/>
-                <field name="igst_amount"/>
-                <field name="tcs_rate"/>
-                <field name="tcs_amount"/>
+                <field name="tax_ids" widget="many2many_tags" optional="1"/>
+                <field name="cgst_rate" optional="1"/>
+                <field name="cgst_amount" optional="1" sum='cgst_amount'/>
+                <field name="sgst_rate" optional="1"/>
+                <field name="sgst_amount" optional="1" sum='sgst_amount'/>
+                <field name="igst_rate" optional="1"/>
+                <field name="igst_amount" optional="1" sum='igst_amount'/>
+                <field name="tcs_rate" optional="1"/>
+                <field name="tcs_amount" optional="1" sum='tcs_amount'/>
+
                 <!-- <field name="ocean_rate"/> -->
                 <!-- <field name="ocean_amount"/> -->
                 
                 <!-- <field name="parent_amount_tax" widget="many2many_tags"/> -->
                 <!-- <field name="amount_by_group_line" widget="tax-group-custom-field" nolabel="1" colspan="2" /> -->
          
-                <field name="price_subtotal"/>
-                <field name="amount_inclusive_tax"/>
-                <field name="currency_id"/>
-                <field name="parent_state"/>
+                <field name="price_subtotal" sum='price_subtotal'/>
+                <field name="amount_inclusive_tax" sum='amount_inclusive_tax'/>
+                <field name="currency_id" optional="1"/>
+                <field name="move_type_name" optional="1"/>
+                <field name="warehouse_id" optional="1"/>
+                <!-- <field name="parent_state"/> -->
                 <!-- <field name="price_subtotal" invisible="1"/> -->
                 <!-- <field name="partner_id" invisible="1"/> -->
             </tree>
@@ -69,9 +78,9 @@
     <record id="action_view_sale_register_views" model="ir.actions.act_window">
       <field name="name">Sale Register Report</field>
       <field name="res_model">account.move.line</field>
-       <field name="domain">[('move_type_name','=',["out_invoice"]),('tax_repartition_line_id','=',None),('price_unit','>',0),('parent_state','=',['posted'])]</field>
+       <field name="domain">[('move_type_name','in',["out_invoice","out_refund"]),('tax_repartition_line_id','=',None),('price_unit','>',0),('exclude_from_invoice_tab','=',False),('parent_state','in',['posted'])]</field>
          <field name="context">{'search_move_id': True}</field>
-      <field name="view_mode">tree</field>
+      <field name="view_mode">tree,pivot,graph</field>
       <field name ="view_id" ref="sale_summary_view_report_tree"/>    
       <!-- <field name = "target">current</field> -->
     </record>
