--- a/po_status_report/views/purchase_order_line.xml
+++ b/po_status_report/views/purchase_order_line.xml
@@ -42,6 +42,7 @@
 					<field name="date_planned"/>
 					<field name="product_qty" string="Quantity"/>
 					<field name="qty_received"/>
+					<field name="remaining_qty"/>
 					<field name="qty_invoiced"/>
 					<field name="price_unit"/>
 					<field name="z_currency_id"/>
