--- a/inventory_balance_summary_14/views/views.xml
+++ b/inventory_balance_summary_14/views/views.xml
@@ -5,25 +5,48 @@
       <field name="model">inv.bal.sum</field>
       <field name="arch" type="xml">
         <tree>
-          <field name="default_code" optional="hide"/>
+          <field name="default_code" optional="show"/>
           <field name="product_id"/>
-          <field name="categ_id" optional="hide"/>
-          <field name="item_group" optional="hide"/>
-          <field name="product_group_1" optional="hide"/>
-          <field name="product_group_2" optional="hide"/>
-          <field name="product_group_3" optional="hide"/>
-          <field name="uom_id" optional="hide"/>
-          <field name="opening_stock" optional="hide"/>
-          <field name="opening_value" sum="Total Value" optional="hide"/>
-          <field name="stock_increase" class="alert-success" optional="hide"/>
-          <field name="value_increase" sum="Total Value" class="alert-success" optional="hide"/>
-          <field name="stock_decrease" class="alert-danger" optional="hide"/>
-          <field name="value_decrease" sum="Total Value" class="alert-danger" optional="hide"/>
-          <field name="closing_stock" optional="hide"/>
-          <field name="closing_value" sum="Total Value" optional="hide"/>
-          <field name="warehouses" optional="hide"/>
-          <field name="locations" optional="hide"/>
+          <field name="categ_id" optional="show"/>
+          <field name="item_group" optional="show"/>
+          <field name="product_group_1" optional="show"/>
+          <field name="product_group_2" optional="show"/>
+          <field name="product_group_3" optional="show"/>
+          <field name="uom_id" optional="show"/>
+          <field name="opening_stock" optional="show"/>
+          <field name="opening_value" sum="Total Value" optional="show"/>
+          <field name="stock_increase" class="alert-success" optional="show"/>
+          <field name="value_increase" sum="Total Value" class="alert-success" optional="show"/>
+          <field name="stock_decrease" class="alert-danger" optional="show"/>
+          <field name="value_decrease" sum="Total Value" class="alert-danger" optional="show"/>
+          <field name="closing_stock" optional="show"/>
+          <field name="closing_value" sum="Total Value" optional="show"/>
+          <field name="warehouses" optional="show"/>
+          <field name="locations" optional="show"/>
         </tree>
+      </field>
+    </record>
+
+    <record id="inventory_balance_summmary_search_view" model="ir.ui.view">
+      <field name="name">inventory balance summmary search view</field>
+      <field name="model">inv.bal.sum</field>
+      <field name="arch" type="xml">
+        <search string="Search Inventory Summary">
+          <field name="default_code"/>
+          <field name="product_id"/>
+          <field name="categ_id"/>
+          <field name="item_group"/>
+          <field name="product_group_1"/>
+          <field name="product_group_2"/>
+          <field name="product_group_3"/>
+          <group expand="1" string="Group By">
+            <filter name="categ_id" context="{'group_by':'categ_id'}"/>
+            <filter name="item_group" context="{'group_by':'item_group'}"/>
+            <filter name="product_group_1" context="{'group_by':'product_group_1'}"/>
+            <filter name="product_group_2" context="{'group_by':'product_group_2'}"/>
+            <filter name="product_group_3" context="{'group_by':'product_group_3'}"/>
+          </group>
+        </search>
       </field>
     </record>
 
@@ -37,7 +60,7 @@
               <group>
                 <field name="open_date" required="1"/>
                 <field name="close_date" required="1"/>
-                <field name="location_ids" domain="[('usage','=','internal')]">
+                <field name="location_ids" domain="[('usage','=','internal')]" context="{'group_by':'warehouse_id'}">
                   <tree>
                     <field name="complete_name" string="Warehouse/Location"/>
                   </tree>
