--- a/creditnote_report_mas/reports/creditnote_report.xml
+++ b/creditnote_report_mas/reports/creditnote_report.xml
@@ -84,13 +84,15 @@
                     </td>
                     <td colspan="2" style="padding:1px;width:32%;border:1px solid #143980;font-size:11px;">
                         <strong style="color:#143980">Sales Invoice No :</strong><br/>
-                        <t t-if="doc.move_type == 'out_refund'">
-                            <t t-set="refval" t-value="doc.get_ref(doc.ref)"/>
-                            <span style="color:black;"><t t-esc="refval"/></span><br/>
-                        </t>
-                        <t t-if="doc.move_type == 'in_refund'">
-                            <span style="color:black;"><!-- <t t-set="refvalue" t-value="doc.get_refdebit(doc.ref)"/> -->
-                            <t t-esc="doc.ref"/></span><br/>
+                        <t t-if="doc.ref">
+                            <t t-if="doc.move_type == 'out_refund'">
+                                <t t-set="refval" t-value="doc.get_ref(doc.ref)"/>
+                                <span style="color:black;"><t t-esc="refval"/></span><br/>
+                            </t>
+                            <t t-if="doc.move_type == 'in_refund'">
+                                <span style="color:black;"><!-- <t t-set="refvalue" t-value="doc.get_refdebit(doc.ref)"/> -->
+                                <t t-esc="doc.ref"/></span><br/>
+                            </t>
                         </t>
                     </td>
                 </tr>
