Sales_register_new

--- a/sale_register_new/views/sale_register_new.xml
+++ b/sale_register_new/views/sale_register_new.xml
@@ -18,8 +18,8 @@
                 <!-- <field name="date"/> -->
                 <field name="invoice_date" string="Accounting Date"/>
                 <field name="date" string="Bill Date"/>
-                <!-- <field name="hsn_code"/> -->
-                <!-- <field name="uqc"/> -->
+                <field name="hsn_code"/>
+                <field name="uqc"/>
                 <!-- <field name="ref"/> -->
                 <field name="company_id" invisible="1"/>
                 
