--- a/mass_product_dimensions/views/views.xml
+++ b/mass_product_dimensions/views/views.xml
@@ -11,7 +11,8 @@
         <field name="arch" type="xml">
             <form>
                 <group>
-                    <field name="typee" readonly="True"/>
+                    <field name="typee" invisible="True"/>
+                    <!-- <field name="name" /> -->
                 </group>
                 <group>
                     <group>
