--- a/creditnote_report_mas/reports/debitnote.xml
+++ b/creditnote_report_mas/reports/debitnote.xml
@@ -15,36 +15,23 @@
         <field name="dpi">90</field>
     </record>
     
-    <record id="creditnote" model="ir.actions.report">
-        <field name="name">Credit note Mas</field>
+    <record id="debitcustomernote" model="ir.actions.report">
+        <field name="name">Debit note for Customer</field>
         <field name="model">account.move</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">creditnote_report_mas.creditnote_report</field>
-        <field name="report_file">creditnote_report_mas.creditnote_report</field>
+        <field name="report_name">creditnote_report_mas.debitnote_report</field>
+        <field name="report_file">creditnote_report_mas.debitnote_report</field>
         <field name="print_report_name">(object.move_type == 'out_refund') and 'INV - %s' % (object.name) or 'Inv - %s' % (object.name)</field>
         <field name="binding_model_id" ref="account.model_account_move"/>
         <field name="binding_type">report</field>
         <field name="paperformat_id" ref="creditnote_report_mas.mas_page_format"/>
     </record>
 
-    <record id="debitnote" model="ir.actions.report">
-        <field name="name">Debit note for Mas</field>
-        <field name="model">account.move</field>
-        <field name="report_type">qweb-pdf</field>
-        <field name="report_name">creditnote_report_mas.creditnote_report</field>
-        <field name="report_file">creditnote_report_mas.creditnote_report</field>
-        <field name="print_report_name">(object.move_type == 'in_refund') and 'INV - %s' % (object.name) or 'Inv - %s' % (object.name)</field>
-        <field name="binding_model_id" ref="account.model_account_move"/>
-        <field name="binding_type">report</field>
-        <field name="paperformat_id" ref="creditnote_report_mas.mas_page_format"/>
-    </record>
 
-    
-
-    <template id="creditnote_report">
+    <template id="debitnote_report">
      <t t-call="web.html_container">
         <t t-foreach="docs" t-as="doc">
-        <t t-call="creditnote_report_mas.external_layout_standard_mass">
+        <t t-call="creditnote_report_mas.external_layout_standard_mass_deb">
             <style>
                 .table td {
  border-top:none !important;
