--- a/creditnote_report_mas/reports/debitnote.xml
+++ b/creditnote_report_mas/reports/debitnote.xml
@@ -15,36 +15,23 @@
         <field name="dpi">90</field>
     </record>
     
-    <record id="creditnote" model="ir.actions.report">
-        <field name="name">Credit note Mas</field>
+    <record id="debitcustomernote" model="ir.actions.report">
+        <field name="name">Debit note for Customer</field>
         <field name="model">account.move</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">creditnote_report_mas.creditnote_report</field>
-        <field name="report_file">creditnote_report_mas.creditnote_report</field>
-        <field name="print_report_name">(object.move_type == 'out_refund') and 'INV - %s' % (object.name) or 'Inv - %s' % (object.name)</field>
+        <field name="report_name">creditnote_report_mas.debitnote_report</field>
+        <field name="report_file">creditnote_report_mas.debitnote_report</field>
+        <field name="print_report_name">(object.move_type == 'out_invoice') and 'INV - %s' % (object.name) or 'Inv - %s' % (object.name)</field>
         <field name="binding_model_id" ref="account.model_account_move"/>
         <field name="binding_type">report</field>
         <field name="paperformat_id" ref="creditnote_report_mas.mas_page_format"/>
     </record>
 
-    <record id="debitnote" model="ir.actions.report">
-        <field name="name">Debit note for Mas</field>
-        <field name="model">account.move</field>
-        <field name="report_type">qweb-pdf</field>
-        <field name="report_name">creditnote_report_mas.creditnote_report</field>
-        <field name="report_file">creditnote_report_mas.creditnote_report</field>
-        <field name="print_report_name">(object.move_type == 'in_refund') and 'INV - %s' % (object.name) or 'Inv - %s' % (object.name)</field>
-        <field name="binding_model_id" ref="account.model_account_move"/>
-        <field name="binding_type">report</field>
-        <field name="paperformat_id" ref="creditnote_report_mas.mas_page_format"/>
-    </record>
 
-    
-
-    <template id="creditnote_report">
+    <template id="debitnote_report">
      <t t-call="web.html_container">
         <t t-foreach="docs" t-as="doc">
-        <t t-call="creditnote_report_mas.external_layout_standard_mass">
+        <t t-call="creditnote_report_mas.external_layout_standard_mass_deb">
             <style>
                 .table td {
  border-top:none !important;
@@ -86,15 +73,15 @@
                     <td colspan="2" style="padding:1px;width:32%;border:1px solid #143980;font-size:11px;">
                         <strong style="color:#143980">Sales Invoice No :</strong><br/>
                         <t t-if="doc.ref">
-                            <t t-if="doc.move_type == 'out_refund'">
-                                <t t-set="refval" t-value="doc.get_ref(doc.ref)"/>
-                                <span style="color:black;"><t t-esc="refval"/></span><br/>
+                           
+                            <t t-if="doc.move_type == 'out_invoice'">
+                                <span style="color:black;">
+                                <t t-esc="doc.debit_origin_id.name"/></span><br/>
                             </t>
-                            <t t-if="doc.move_type == 'in_refund'">
-                                <span style="color:black;"><!-- <t t-set="refvalue" t-value="doc.get_refdebit(doc.ref)"/> -->
-                                <t t-esc="doc.ref"/></span><br/>
-                            </t>
+                            
                         </t>
+
+
                     </td>
                 </tr>
                 <tr style="height:3px !important;">
@@ -121,8 +108,8 @@
                     <td colspan="2" style="padding:1px;width:16%;border:1px solid #143980;font-size:11px;">
                         <strong style="color:#143980">Sale Invoice Date :</strong><br/>
                         <span style="color:black;">
-                       <t t-if="doc.reversed_entry_id.invoice_date">
-                            <t t-esc="doc.reversed_entry_id.invoice_date.strftime('%d-%m-%Y')"/>
+                       <t t-if="doc.debit_origin_id">
+                            <t t-esc="doc.debit_origin_id.invoice_date.strftime('%d-%m-%Y')"/>
                         </t></span>
                     </td>
                 </tr>
